<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/titleFollowingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Following"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="16dp"/>

    <!-- RecyclerView to display the list of followed users -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFollowing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Back Button at the bottom -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

</LinearLayout>


